--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -10,6 +10,8 @@
       content="Web site created using create-react-app"
     />
     <link href="https://fonts.cdnfonts.com/css/ananda-2" rel="stylesheet">
+    <link href="https://fonts.cdnfonts.com/css/hittedal-sans" rel="stylesheet">
+                
                 
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
     <!--
